profile fixed + scrollbar styled

--- a/blocks/profile/__additional-info/profile__additional-info.css
+++ b/blocks/profile/__additional-info/profile__additional-info.css
@@ -6,7 +6,7 @@
 
 @media screen and (max-width: 767px) {
   .profile__additional-info {
-    grid-column: 1/2;
+    grid-column: 2/3;
     font-size: 14px;
     text-align: center;
     min-height: 17px;
