--- a/blocks/profile/__name/profile__name.css
+++ b/blocks/profile/__name/profile__name.css
@@ -11,5 +11,6 @@
     min-height: 33px;
     font-size: 27px;
     text-align: center;
+    grid-column: 2;
   }
 }
